--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next/swc-wasm-nodejs": "^16.0.1",
     "@tanstack/react-query": "^5.90.7",
     "axios": "^1.13.2",
-    "next": "16.0.1",
+    "cookie": "^1.0.2",
+    "formik": "^2.4.9",
+    "next": "^16.0.1",
     "normalize.css": "^8.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hot-toast": "^2.6.0",
+    "yup": "^1.7.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
