--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/swc-wasm-nodejs": "^16.0.1",
     "@tanstack/react-query": "^5.90.7",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "axios": "^1.13.2",
     "cookie": "^1.0.2",
     "formik": "^2.4.9",
