--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,4 @@
 {
-  "buildCommand": "npm run build",
-  "typescript": {
-    "ignoreBuildErrors": false
-  }
+  "buildCommand": "npm run build"
+
 }
